--- a/sagewelte/public/index.html
+++ b/sagewelte/public/index.html
@@ -15,7 +15,10 @@
 			href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap"
 			rel="stylesheet"
 		/>
-
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Sage Welte</title>
 	</head>
 	<body>
